Bug 476181 - imacros.c.out out of date; also Makefile.in bustage/cleanup (r=ted/jorendorff).
UltraBlame original commit: cbfb5fa0080aac71a069e68133abdac81288e236

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1944,123 +1944,6 @@ I
 (
 srcdir
 )
-#
-MSVC
-'
--
-Gy
-'
-cc
-flag
-and
-'
-/
-OPT
-:
-REF
-'
-linker
-flag
-cause
-JS_GetArgument
-and
-#
-JS_GetLocalVariable
-to
-be
-folded
-to
-the
-same
-address
-by
-the
-linker
-#
-leading
-to
-a
-crash
-on
-startup
-.
-See
-bug
-151066
-.
-So
-in
-optimized
-builds
-#
-add
-the
-/
-OPT
-:
-NOICF
-flag
-which
-turns
-off
-'
-identical
-COMDAT
-folding
-'
-.
-#
-#
-N
-.
-B
-.
-:
-'
-identical
-COMDAT
-folding
-'
-that
-folds
-functions
-whose
-addresses
-#
-are
-taken
-violates
-the
-ISO
-C
-and
-C
-+
-+
-standards
-.
-ifndef
-MOZ_DEBUG
-ifeq
-(
-_WINNT
-(
-GNU_CC
-)
-_
-(
-OS_ARCH
-)
-)
-LDFLAGS
-+
-=
--
-OPT
-:
-NOICF
-endif
-endif
 GARBAGE
 +
 =
@@ -3650,9 +3533,6 @@ install
 SCRIPTS
 )
 (
-PROGRAM
-)
-(
 SYSINSTALL
 )
 ^
@@ -4017,6 +3897,9 @@ imacro_asm
 js
 .
 in
+jsopcode
+.
+tbl
 (
 CC
 )
@@ -4034,14 +3917,83 @@ I
 (
 srcdir
 )
-?
+<
 >
 GARBAGE
 +
 =
+imacros
+.
+c
+.
+out
 imacro_asm
 .
 js
+#
+Build
+imacros
+.
+c
+.
+out
+after
+descending
+into
+DIRS
+and
+building
+the
+js
+shell
+.
+#
+This
+may
+result
+in
+an
+updated
+imacros
+.
+c
+.
+out
+file
+that
+requires
+a
+re
+-
+build
+#
+to
+stabilize
+.
+libs
+:
+:
+imacros
+.
+c
+.
+out
+cmp
+-
+s
+<
+(
+srcdir
+)
+/
+<
+|
+|
+cp
+<
+(
+srcdir
+)
 %
 .
 c
@@ -4051,17 +4003,13 @@ out
 %
 .
 jsasm
-(
-PROGRAM
-)
+js
 imacro_asm
 .
 js
 .
 /
-(
-PROGRAM
-)
+js
 imacro_asm
 .
 js
