--- a/js/src/imacro_asm.js.in
+++ b/js/src/imacro_asm.js.in
@@ -1168,137 +1168,6 @@ implemented
 )
 ;
 }
-const
-line_regexp_parts
-=
-[
-"
-^
-(
-?
-:
-(
-\
-\
-w
-+
-)
-:
-)
-?
-"
-"
-\
-\
-s
-*
-(
-\
-\
-.
-?
-\
-\
-w
-+
-)
-"
-"
-(
-?
-:
-\
-\
-s
-+
-(
-\
-\
-w
-+
-|
-\
-\
-(
-[
-^
-)
-]
-*
-\
-\
-)
-)
-)
-?
-"
-"
-(
-?
-:
-\
-\
-s
-+
-(
-[
-\
-\
-w
--
-]
-+
-|
-\
-\
-(
-[
-^
-)
-]
-*
-\
-\
-)
-)
-)
-?
-"
-"
-(
-?
-:
-\
-\
-s
-*
-(
-?
-:
-#
-.
-*
-)
-)
-?
-"
-]
-;
-const
-line_regexp
-=
-new
-RegExp
-(
-line_regexp_parts
-.
-join
-(
-"
-"
-)
-)
-;
 /
 *
 *
@@ -1484,6 +1353,172 @@ examples
 .
 *
 /
+const
+line_regexp_parts
+=
+[
+"
+^
+(
+?
+:
+(
+\
+\
+w
++
+)
+:
+)
+?
+"
+/
+/
+optional
+label
+at
+start
+of
+line
+"
+\
+\
+s
+*
+(
+\
+\
+.
+?
+\
+\
+w
++
+)
+"
+/
+/
+optional
+spaces
+(
+pseudo
+-
+)
+opcode
+"
+(
+?
+:
+\
+\
+s
++
+(
+\
+\
+w
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+/
+/
+optional
+first
+immediate
+operand
+"
+(
+?
+:
+\
+\
+s
++
+(
+[
+\
+\
+w
+-
+]
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+/
+/
+optional
+second
+immediate
+operand
+"
+(
+?
+:
+\
+\
+s
+*
+(
+?
+:
+#
+.
+*
+)
+)
+?
+"
+/
+/
+optional
+spaces
+and
+comment
+]
+;
+const
+line_regexp
+=
+new
+RegExp
+(
+line_regexp_parts
+.
+join
+(
+"
+"
+)
+)
+;
 function
 assemble
 (
@@ -1514,7 +1549,7 @@ BY
 imacro_asm
 .
 js
-from
+FROM
 "
 +
 filename
@@ -2557,11 +2592,6 @@ opname
 ;
 if
 (
-label
-)
-{
-if
-(
 !
 imacro
 )
@@ -2570,10 +2600,10 @@ new
 Error
 (
 "
-label
+opcode
 "
 +
-label
+opname
 +
 "
 outside
@@ -2583,6 +2613,10 @@ imacro
 "
 )
 ;
+if
+(
+label
+)
 imacro
 .
 labeldefs
@@ -2594,7 +2628,6 @@ imacro
 .
 offset
 ;
-}
 let
 op
 =
