--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -3935,6 +3935,58 @@ js
 ifndef
 CROSS_COMPILE
 #
+Obsolete
+comment
+:
+if
+you
+replace
+update
+-
+imacros
+with
+libs
+this
+would
+apply
+#
+but
+then
+parallel
+gmake
+would
+sometimes
+try
+to
+run
+(
+DIST
+)
+/
+bin
+/
+js
+before
+it
+#
+had
+been
+built
+and
+installed
+.
+Want
+a
+fix
+for
+this
+de
+-
+automating
+for
+now
+.
+#
 Build
 imacros
 .
@@ -3974,7 +4026,9 @@ build
 to
 stabilize
 .
-libs
+update
+-
+imacros
 :
 :
 imacros
