--- a/content/svg/content/src/Makefile.in
+++ b/content/svg/content/src/Makefile.in
@@ -512,10 +512,6 @@ nsSVGAnimatedNumberList
 .
 cpp
 \
-nsSVGAnimatedRect
-.
-cpp
-\
 nsSVGAnimatedTransformList
 .
 cpp
@@ -765,6 +761,10 @@ nsSVGUseElement
 cpp
 \
 nsSVGValue
+.
+cpp
+\
+nsSVGViewBox
 .
 cpp
 \
