bug 474732 - Rerunning configure causes the world to be rebuilt, r=ted
UltraBlame original commit: 332c6aaee89c53421e6ec62e7e36a1d110844cab

--- a/configure.in
+++ b/configure.in
@@ -71028,6 +71028,27 @@ echo
 MAKEFILES
 >
 unallmakefiles
+mv
+-
+f
+config
+/
+autoconf
+.
+mk
+config
+/
+autoconf
+.
+mk
+.
+orig
+2
+>
+/
+dev
+/
+null
 AC_OUTPUT
 (
 MAKEFILES
@@ -71066,6 +71087,12 @@ CAIRO_FEATURES_H
 orig
 ;
 then
+echo
+"
+CAIRO_FEATURES_H
+is
+unchanged
+"
 mv
 -
 f
@@ -71844,3 +71871,97 @@ COMPILE_ENVIRONMENT
 &
 !
 LIBXUL_SDK_DIR
+dnl
+Prevent
+the
+regeneration
+of
+autoconf
+.
+mk
+forcing
+rebuilds
+of
+the
+world
+dnl
+Needs
+to
+be
+at
+the
+end
+to
+respect
+possible
+changes
+from
+NSPR
+configure
+if
+cmp
+-
+b
+config
+/
+autoconf
+.
+mk
+config
+/
+autoconf
+.
+mk
+.
+orig
+;
+then
+echo
+"
+config
+/
+autoconf
+.
+mk
+is
+unchanged
+"
+mv
+-
+f
+config
+/
+autoconf
+.
+mk
+.
+orig
+config
+/
+autoconf
+.
+mk
+2
+>
+/
+dev
+/
+null
+else
+rm
+-
+f
+config
+/
+autoconf
+.
+mk
+.
+orig
+2
+>
+/
+dev
+/
+null
+fi
