bug 460515 - Remove assumption that xpcshell etc in same directory as app executable. r=jwalden
UltraBlame original commit: 7c7ec4bd36a6aae629950758362b7c589b0e4564

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -433,6 +433,8 @@ import
 sys
 import
 time
+import
+shutil
 from
 urllib
 import
@@ -894,9 +896,183 @@ app
 "
 ]
 =
+os
+.
+path
+.
+join
+(
+SCRIPT_DIRECTORY
 automation
 .
 DEFAULT_APP
+)
+self
+.
+add_option
+(
+"
+-
+-
+xre
+-
+path
+"
+action
+=
+"
+store
+"
+type
+=
+"
+string
+"
+dest
+=
+"
+xrePath
+"
+help
+=
+"
+absolute
+path
+to
+directory
+containing
+XRE
+(
+probably
+xulrunner
+)
+"
+)
+#
+we
+'
+ll
+default
+this
+to
+the
+directory
+of
+app
+below
+defaults
+[
+"
+xrePath
+"
+]
+=
+None
+self
+.
+add_option
+(
+"
+-
+-
+utility
+-
+path
+"
+action
+=
+"
+store
+"
+type
+=
+"
+string
+"
+dest
+=
+"
+utilityPath
+"
+help
+=
+"
+absolute
+path
+to
+directory
+containing
+utility
+programs
+(
+xpcshell
+ssltunnel
+certutil
+)
+"
+)
+defaults
+[
+"
+utilityPath
+"
+]
+=
+automation
+.
+DIST_BIN
+self
+.
+add_option
+(
+"
+-
+-
+certificate
+-
+path
+"
+action
+=
+"
+store
+"
+type
+=
+"
+string
+"
+dest
+=
+"
+certPath
+"
+help
+=
+"
+absolute
+path
+to
+directory
+containing
+certificate
+store
+to
+use
+testing
+profile
+"
+)
+defaults
+[
+"
+certPath
+"
+]
+=
+automation
+.
+CERTS_SRC_DIR
 self
 .
 add_option
@@ -1537,6 +1713,51 @@ fatalAssertions
 ]
 =
 False
+self
+.
+add_option
+(
+"
+-
+-
+extra
+-
+profile
+-
+file
+"
+action
+=
+"
+append
+"
+dest
+=
+"
+extraProfileFiles
+"
+help
+=
+"
+copy
+specified
+files
+/
+dirs
+to
+testing
+profile
+"
+)
+defaults
+[
+"
+extraProfileFiles
+"
+]
+=
+[
+]
 #
 -
 h
@@ -1732,6 +1953,20 @@ _closeWhenDone
 options
 .
 closeWhenDone
+self
+.
+_utilityPath
+=
+options
+.
+utilityPath
+self
+.
+_xrePath
+=
+options
+.
+xrePath
 def
 start
 (
@@ -1772,9 +2007,9 @@ LD_LIBRARY_PATH
 "
 ]
 =
-automation
+self
 .
-DIST_BIN
+_xrePath
 env
 [
 "
@@ -1782,9 +2017,9 @@ MOZILLA_FIVE_HOME
 "
 ]
 =
-automation
+self
 .
-DIST_BIN
+_xrePath
 env
 [
 "
@@ -1795,9 +2030,57 @@ XPCOM_DEBUG_BREAK
 "
 warn
 "
+if
+automation
+.
+IS_MAC
+:
+env
+[
+"
+DYLD_LIBRARY_PATH
+"
+]
+=
+self
+.
+_xrePath
+elif
+automation
+.
+IS_WIN32
+:
+env
+[
+"
+PATH
+"
+]
+=
+env
+[
+"
+PATH
+"
+]
++
+"
+;
+"
++
+self
+.
+_xrePath
 args
 =
 [
+"
+-
+g
+"
+self
+.
+_xrePath
 "
 -
 v
@@ -1836,18 +2119,23 @@ js
 ]
 xpcshell
 =
-automation
+os
 .
-DIST_BIN
-+
-"
-/
-"
-+
+path
+.
+join
+(
+self
+.
+_utilityPath
 "
 xpcshell
 "
-;
++
+automation
+.
+BIN_SUFFIX
+)
 self
 .
 _process
@@ -1917,17 +2205,19 @@ timeout
 0
 aliveFile
 =
+os
+.
+path
+.
+join
+(
 PROFILE_DIRECTORY
-+
-"
-/
-"
-+
 "
 server_alive
 .
 txt
 "
+)
 i
 =
 0
@@ -2022,6 +2312,46 @@ _process
 .
 kill
 (
+)
+def
+getFullPath
+(
+path
+)
+:
+"
+Get
+an
+absolute
+path
+relative
+to
+oldcwd
+.
+"
+return
+os
+.
+path
+.
+normpath
+(
+os
+.
+path
+.
+join
+(
+oldcwd
+os
+.
+path
+.
+expanduser
+(
+path
+)
+)
 )
 #
 #
@@ -2150,6 +2480,16 @@ maybeForceLeakThreshold
 (
 options
 )
+options
+.
+app
+=
+getFullPath
+(
+options
+.
+app
+)
 if
 not
 os
@@ -2219,6 +2559,73 @@ exit
 1
 )
 #
+default
+xrePath
+to
+the
+app
+path
+if
+not
+provided
+if
+options
+.
+xrePath
+is
+None
+:
+options
+.
+xrePath
+=
+os
+.
+path
+.
+dirname
+(
+options
+.
+app
+)
+else
+:
+#
+allow
+relative
+paths
+options
+.
+xrePath
+=
+getFullPath
+(
+options
+.
+xrePath
+)
+options
+.
+utilityPath
+=
+getFullPath
+(
+options
+.
+utilityPath
+)
+options
+.
+certPath
+=
+getFullPath
+(
+options
+.
+certPath
+)
+#
 browser
 environment
 browserEnv
@@ -2269,6 +2676,18 @@ XPCOM_DEBUG_BREAK
 "
 warn
 "
+appDir
+=
+os
+.
+path
+.
+dirname
+(
+options
+.
+app
+)
 if
 automation
 .
@@ -2281,9 +2700,7 @@ LD_LIBRARY_PATH
 "
 ]
 =
-automation
-.
-DIST_BIN
+appDir
 browserEnv
 [
 "
@@ -2291,9 +2708,7 @@ MOZILLA_FIVE_HOME
 "
 ]
 =
-automation
-.
-DIST_BIN
+appDir
 browserEnv
 [
 "
@@ -2372,6 +2787,10 @@ PROFILE_DIRECTORY
 manifest
 =
 addChromeToProfile
+(
+options
+)
+copyExtraFilesToProfile
 (
 options
 )
@@ -2624,37 +3043,15 @@ options
 .
 logFile
 :
-logpath
-=
-os
-.
-path
-.
-join
-(
-oldcwd
-os
-.
-path
-.
-expanduser
-(
-options
-.
-logFile
-)
-)
 options
 .
 logFile
 =
-os
-.
-path
-.
-normpath
+getFullPath
 (
-logpath
+options
+.
+logFile
 )
 if
 options
@@ -2823,6 +3220,21 @@ PROFILE_DIRECTORY
 options
 .
 browserArgs
+utilityPath
+=
+options
+.
+utilityPath
+xrePath
+=
+options
+.
+xrePath
+certPath
+=
+options
+.
+certPath
 )
 #
 Server
@@ -3983,17 +4395,19 @@ config
 =
 open
 (
+os
+.
+path
+.
+join
+(
 PROFILE_DIRECTORY
-+
-"
-/
-"
-+
 "
 testConfig
 .
 js
 "
+)
 "
 w
 "
@@ -4027,15 +4441,17 @@ profile
 "
 chromedir
 =
+os
+.
+path
+.
+join
+(
 PROFILE_DIRECTORY
-+
-"
-/
-"
-+
 "
 chrome
 "
+)
 os
 .
 mkdir
@@ -4138,17 +4554,19 @@ chromeFile
 =
 open
 (
+os
+.
+path
+.
+join
+(
 PROFILE_DIRECTORY
-+
-"
-/
-"
-+
 "
 userChrome
 .
 css
 "
+)
 "
 a
 "
@@ -4235,19 +4653,22 @@ app
 )
 manifest
 =
+os
+.
 path
-+
-"
-/
-"
-+
+.
+join
+(
+path
 "
 chrome
-/
+"
+"
 mochikit
 .
 manifest
 "
+)
 manifestFile
 =
 open
@@ -4324,6 +4745,86 @@ close
 )
 return
 manifest
+def
+copyExtraFilesToProfile
+(
+options
+)
+:
+"
+Copy
+extra
+files
+or
+dirs
+specified
+on
+the
+command
+line
+to
+the
+testing
+profile
+.
+"
+for
+f
+in
+options
+.
+extraProfileFiles
+:
+abspath
+=
+getFullPath
+(
+f
+)
+dest
+=
+os
+.
+path
+.
+join
+(
+PROFILE_DIRECTORY
+os
+.
+path
+.
+basename
+(
+abspath
+)
+)
+if
+os
+.
+path
+.
+isdir
+(
+abspath
+)
+:
+shutil
+.
+copytree
+(
+abspath
+dest
+)
+else
+:
+shutil
+.
+copy
+(
+abspath
+dest
+)
 #
 #
 #
