--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -433,8 +433,6 @@ import
 sys
 import
 time
-import
-shutil
 from
 urllib
 import
@@ -896,183 +894,9 @@ app
 "
 ]
 =
-os
-.
-path
-.
-join
-(
-SCRIPT_DIRECTORY
 automation
 .
 DEFAULT_APP
-)
-self
-.
-add_option
-(
-"
--
--
-xre
--
-path
-"
-action
-=
-"
-store
-"
-type
-=
-"
-string
-"
-dest
-=
-"
-xrePath
-"
-help
-=
-"
-absolute
-path
-to
-directory
-containing
-XRE
-(
-probably
-xulrunner
-)
-"
-)
-#
-we
-'
-ll
-default
-this
-to
-the
-directory
-of
-app
-below
-defaults
-[
-"
-xrePath
-"
-]
-=
-None
-self
-.
-add_option
-(
-"
--
--
-utility
--
-path
-"
-action
-=
-"
-store
-"
-type
-=
-"
-string
-"
-dest
-=
-"
-utilityPath
-"
-help
-=
-"
-absolute
-path
-to
-directory
-containing
-utility
-programs
-(
-xpcshell
-ssltunnel
-certutil
-)
-"
-)
-defaults
-[
-"
-utilityPath
-"
-]
-=
-automation
-.
-DIST_BIN
-self
-.
-add_option
-(
-"
--
--
-certificate
--
-path
-"
-action
-=
-"
-store
-"
-type
-=
-"
-string
-"
-dest
-=
-"
-certPath
-"
-help
-=
-"
-absolute
-path
-to
-directory
-containing
-certificate
-store
-to
-use
-testing
-profile
-"
-)
-defaults
-[
-"
-certPath
-"
-]
-=
-automation
-.
-CERTS_SRC_DIR
 self
 .
 add_option
@@ -1713,51 +1537,6 @@ fatalAssertions
 ]
 =
 False
-self
-.
-add_option
-(
-"
--
--
-extra
--
-profile
--
-file
-"
-action
-=
-"
-append
-"
-dest
-=
-"
-extraProfileFiles
-"
-help
-=
-"
-copy
-specified
-files
-/
-dirs
-to
-testing
-profile
-"
-)
-defaults
-[
-"
-extraProfileFiles
-"
-]
-=
-[
-]
 #
 -
 h
@@ -1953,20 +1732,6 @@ _closeWhenDone
 options
 .
 closeWhenDone
-self
-.
-_utilityPath
-=
-options
-.
-utilityPath
-self
-.
-_xrePath
-=
-options
-.
-xrePath
 def
 start
 (
@@ -2007,9 +1772,9 @@ LD_LIBRARY_PATH
 "
 ]
 =
-self
+automation
 .
-_xrePath
+DIST_BIN
 env
 [
 "
@@ -2017,9 +1782,9 @@ MOZILLA_FIVE_HOME
 "
 ]
 =
-self
+automation
 .
-_xrePath
+DIST_BIN
 env
 [
 "
@@ -2030,57 +1795,9 @@ XPCOM_DEBUG_BREAK
 "
 warn
 "
-if
-automation
-.
-IS_MAC
-:
-env
-[
-"
-DYLD_LIBRARY_PATH
-"
-]
-=
-self
-.
-_xrePath
-elif
-automation
-.
-IS_WIN32
-:
-env
-[
-"
-PATH
-"
-]
-=
-env
-[
-"
-PATH
-"
-]
-+
-"
-;
-"
-+
-self
-.
-_xrePath
 args
 =
 [
-"
--
-g
-"
-self
-.
-_xrePath
 "
 -
 v
@@ -2119,23 +1836,18 @@ js
 ]
 xpcshell
 =
-os
+automation
 .
-path
-.
-join
-(
-self
-.
-_utilityPath
+DIST_BIN
++
+"
+/
+"
++
 "
 xpcshell
 "
-+
-automation
-.
-BIN_SUFFIX
-)
+;
 self
 .
 _process
@@ -2205,19 +1917,17 @@ timeout
 0
 aliveFile
 =
-os
-.
-path
-.
-join
-(
 PROFILE_DIRECTORY
++
+"
+/
+"
++
 "
 server_alive
 .
 txt
 "
-)
 i
 =
 0
@@ -2312,46 +2022,6 @@ _process
 .
 kill
 (
-)
-def
-getFullPath
-(
-path
-)
-:
-"
-Get
-an
-absolute
-path
-relative
-to
-oldcwd
-.
-"
-return
-os
-.
-path
-.
-normpath
-(
-os
-.
-path
-.
-join
-(
-oldcwd
-os
-.
-path
-.
-expanduser
-(
-path
-)
-)
 )
 #
 #
@@ -2480,16 +2150,6 @@ maybeForceLeakThreshold
 (
 options
 )
-options
-.
-app
-=
-getFullPath
-(
-options
-.
-app
-)
 if
 not
 os
@@ -2559,73 +2219,6 @@ exit
 1
 )
 #
-default
-xrePath
-to
-the
-app
-path
-if
-not
-provided
-if
-options
-.
-xrePath
-is
-None
-:
-options
-.
-xrePath
-=
-os
-.
-path
-.
-dirname
-(
-options
-.
-app
-)
-else
-:
-#
-allow
-relative
-paths
-options
-.
-xrePath
-=
-getFullPath
-(
-options
-.
-xrePath
-)
-options
-.
-utilityPath
-=
-getFullPath
-(
-options
-.
-utilityPath
-)
-options
-.
-certPath
-=
-getFullPath
-(
-options
-.
-certPath
-)
-#
 browser
 environment
 browserEnv
@@ -2676,18 +2269,6 @@ XPCOM_DEBUG_BREAK
 "
 warn
 "
-appDir
-=
-os
-.
-path
-.
-dirname
-(
-options
-.
-app
-)
 if
 automation
 .
@@ -2700,7 +2281,9 @@ LD_LIBRARY_PATH
 "
 ]
 =
-appDir
+automation
+.
+DIST_BIN
 browserEnv
 [
 "
@@ -2708,7 +2291,9 @@ MOZILLA_FIVE_HOME
 "
 ]
 =
-appDir
+automation
+.
+DIST_BIN
 browserEnv
 [
 "
@@ -2787,10 +2372,6 @@ PROFILE_DIRECTORY
 manifest
 =
 addChromeToProfile
-(
-options
-)
-copyExtraFilesToProfile
 (
 options
 )
@@ -3043,15 +2624,37 @@ options
 .
 logFile
 :
-options
-.
-logFile
+logpath
 =
-getFullPath
+os
+.
+path
+.
+join
+(
+oldcwd
+os
+.
+path
+.
+expanduser
 (
 options
 .
 logFile
+)
+)
+options
+.
+logFile
+=
+os
+.
+path
+.
+normpath
+(
+logpath
 )
 if
 options
@@ -3220,21 +2823,6 @@ PROFILE_DIRECTORY
 options
 .
 browserArgs
-utilityPath
-=
-options
-.
-utilityPath
-xrePath
-=
-options
-.
-xrePath
-certPath
-=
-options
-.
-certPath
 )
 #
 Server
@@ -4395,19 +3983,17 @@ config
 =
 open
 (
-os
-.
-path
-.
-join
-(
 PROFILE_DIRECTORY
++
+"
+/
+"
++
 "
 testConfig
 .
 js
 "
-)
 "
 w
 "
@@ -4441,17 +4027,15 @@ profile
 "
 chromedir
 =
-os
-.
-path
-.
-join
-(
 PROFILE_DIRECTORY
++
+"
+/
+"
++
 "
 chrome
 "
-)
 os
 .
 mkdir
@@ -4554,19 +4138,17 @@ chromeFile
 =
 open
 (
-os
-.
-path
-.
-join
-(
 PROFILE_DIRECTORY
++
+"
+/
+"
++
 "
 userChrome
 .
 css
 "
-)
 "
 a
 "
@@ -4653,22 +4235,19 @@ app
 )
 manifest
 =
-os
-.
 path
-.
-join
-(
-path
++
+"
+/
+"
++
 "
 chrome
-"
-"
+/
 mochikit
 .
 manifest
 "
-)
 manifestFile
 =
 open
@@ -4745,86 +4324,6 @@ close
 )
 return
 manifest
-def
-copyExtraFilesToProfile
-(
-options
-)
-:
-"
-Copy
-extra
-files
-or
-dirs
-specified
-on
-the
-command
-line
-to
-the
-testing
-profile
-.
-"
-for
-f
-in
-options
-.
-extraProfileFiles
-:
-abspath
-=
-getFullPath
-(
-f
-)
-dest
-=
-os
-.
-path
-.
-join
-(
-PROFILE_DIRECTORY
-os
-.
-path
-.
-basename
-(
-abspath
-)
-)
-if
-os
-.
-path
-.
-isdir
-(
-abspath
-)
-:
-shutil
-.
-copytree
-(
-abspath
-dest
-)
-else
-:
-shutil
-.
-copy
-(
-abspath
-dest
-)
 #
 #
 #
