--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -538,10 +538,6 @@ test_onloadedmetadata
 .
 html
 \
-test_progress1
-.
-html
-\
 test_progress3
 .
 html
@@ -667,6 +663,18 @@ html
 NULL
 )
 endif
+#
+test_progress1
+.
+html
+disabled
+while
+we
+figure
+out
+the
+random
+failure
 else
 _TEST_FILES
 +
