Bug 456449: Upgraded NSPR to NSPR_HEAD_20090205.
UltraBlame original commit: 89d4b2d281974f8448787902e9489f72cd8d5c17

--- a/nsprpub/configure.in
+++ b/nsprpub/configure.in
@@ -11967,6 +11967,40 @@ OUT
 "
 "
 '
+if
+test
+-
+n
+"
+MOZ_DEBUG_SYMBOLS
+"
+;
+then
+OS_LDFLAGS
+=
+-
+DEBUG
+-
+DEBUGTYPE
+:
+CV
+OS_DLLFLAGS
+=
+-
+DEBUG
+-
+DEBUGTYPE
+:
+CV
+DSO_LDOPTS
+=
+-
+DEBUG
+-
+DEBUGTYPE
+:
+CV
+fi
 _DEBUG_FLAGS
 =
 -
