--- a/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
+++ b/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
@@ -1538,6 +1538,54 @@ interfaces
 nsIPrefBranch
 )
 ;
+let
+bundle
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+intl
+/
+stringbundle
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIStringBundleService
+)
+.
+createBundle
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+locale
+/
+downloads
+/
+unknownContentType
+.
+properties
+"
+)
+;
 if
 (
 !
@@ -1648,6 +1696,8 @@ dnldMgr
 .
 userDownloadsDirectory
 ;
+try
+{
 result
 =
 this
@@ -1659,6 +1709,102 @@ aDefaultFile
 aSuggestedFileExtension
 )
 ;
+}
+catch
+(
+ex
+)
+{
+if
+(
+ex
+.
+result
+=
+=
+Components
+.
+results
+.
+NS_ERROR_FILE_ACCESS_DENIED
+)
+{
+let
+prompter
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+embedcomp
+/
+prompt
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPromptService
+)
+;
+/
+/
+Display
+error
+alert
+(
+using
+text
+supplied
+by
+back
+-
+end
+)
+prompter
+.
+alert
+(
+this
+.
+dialog
+bundle
+.
+GetStringFromName
+(
+"
+badPermissions
+.
+title
+"
+)
+bundle
+.
+GetStringFromName
+(
+"
+badPermissions
+"
+)
+)
+;
+return
+;
+}
+}
 /
 /
 Check
@@ -1720,58 +1866,6 @@ filepicker
 createInstance
 (
 nsIFilePicker
-)
-;
-var
-bundle
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-intl
-/
-stringbundle
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIStringBundleService
-)
-;
-bundle
-=
-bundle
-.
-createBundle
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-locale
-/
-downloads
-/
-unknownContentType
-.
-properties
-"
 )
 ;
 var
@@ -3095,6 +3189,22 @@ e
 n
 "
 )
+;
+if
+(
+e
+.
+result
+=
+=
+Components
+.
+results
+.
+NS_ERROR_FILE_ACCESS_DENIED
+)
+throw
+e
 ;
 if
 (
