--- a/widget/tests/Makefile.in
+++ b/widget/tests/Makefile.in
@@ -402,7 +402,7 @@ relativesrcdir
 =
 widget
 /
-test
+tests
 include
 (
 DEPTH
@@ -413,6 +413,131 @@ config
 autoconf
 .
 mk
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+windows
+)
+ifneq
+(
+(
+OS_ARCH
+)
+WINCE
+)
+ifndef
+MOZ_ENABLE_LIBXUL
+MOZILLA_INTERNAL_API
+=
+1
+else
+LIBS
++
+=
+(
+DIST
+)
+/
+lib
+/
+(
+LIB_PREFIX
+)
+xpcomglue_s
+.
+(
+LIB_SUFFIX
+)
+\
+(
+NULL
+)
+endif
+CPP_UNIT_TESTS
++
+=
+TestWinTSF
+.
+cpp
+\
+(
+NULL
+)
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+xpcom
+/
+tests
+CPPSRCS
++
+=
+(
+CPP_UNIT_TESTS
+)
+SIMPLE_PROGRAMS
++
+=
+(
+CPP_UNIT_TESTS
+:
+.
+cpp
+=
+(
+BIN_SUFFIX
+)
+)
+REQUIRES
++
+=
+appshell
+content
+docshell
+\
+dom
+embed_base
+gfx
+layout
+locale
+\
+necko
+string
+thebes
+uriloader
+view
+\
+webbrwsr
+widget
+xpcom
+\
+(
+NULL
+)
+LIBS
++
+=
+(
+XPCOM_LIBS
+)
+\
+(
+NSPR_LIBS
+)
+\
+(
+NULL
+)
+endif
+endif
 include
 (
 topsrcdir
@@ -499,3 +624,60 @@ chrome
 (
 relativesrcdir
 )
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+windows
+)
+ifneq
+(
+(
+OS_ARCH
+)
+WINCE
+)
+check
+:
+:
+(
+EXIT_ON_ERROR
+)
+\
+for
+f
+in
+(
+subst
+.
+cpp
+(
+CPP_UNIT_TESTS
+)
+)
+;
+do
+\
+XPCOM_DEBUG_BREAK
+=
+stack
+-
+and
+-
+abort
+(
+RUN_TEST_PROGRAM
+)
+(
+DIST
+)
+/
+bin
+/
+f
+;
+\
+done
+endif
+endif
