Revert changeset fc8d54ab29a6 (Bug 88831, Support new IME API "Text Services Framework" from Office XP and Windows XP) due to failure (every time) of the new unit test it added (Test WinTSF) on the Windows tinderbox.
UltraBlame original commit: 26c31b847949c27e2dbc7dfba3c03f92a07cd662

--- a/widget/tests/Makefile.in
+++ b/widget/tests/Makefile.in
@@ -402,7 +402,7 @@ relativesrcdir
 =
 widget
 /
-tests
+test
 include
 (
 DEPTH
@@ -413,131 +413,6 @@ config
 autoconf
 .
 mk
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-windows
-)
-ifneq
-(
-(
-OS_ARCH
-)
-WINCE
-)
-ifndef
-MOZ_ENABLE_LIBXUL
-MOZILLA_INTERNAL_API
-=
-1
-else
-LIBS
-+
-=
-(
-DIST
-)
-/
-lib
-/
-(
-LIB_PREFIX
-)
-xpcomglue_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-NULL
-)
-endif
-CPP_UNIT_TESTS
-+
-=
-TestWinTSF
-.
-cpp
-\
-(
-NULL
-)
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-topsrcdir
-)
-/
-xpcom
-/
-tests
-CPPSRCS
-+
-=
-(
-CPP_UNIT_TESTS
-)
-SIMPLE_PROGRAMS
-+
-=
-(
-CPP_UNIT_TESTS
-:
-.
-cpp
-=
-(
-BIN_SUFFIX
-)
-)
-REQUIRES
-+
-=
-appshell
-content
-docshell
-\
-dom
-embed_base
-gfx
-layout
-locale
-\
-necko
-string
-thebes
-uriloader
-view
-\
-webbrwsr
-widget
-xpcom
-\
-(
-NULL
-)
-LIBS
-+
-=
-(
-XPCOM_LIBS
-)
-\
-(
-NSPR_LIBS
-)
-\
-(
-NULL
-)
-endif
-endif
 include
 (
 topsrcdir
@@ -624,60 +499,3 @@ chrome
 (
 relativesrcdir
 )
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-windows
-)
-ifneq
-(
-(
-OS_ARCH
-)
-WINCE
-)
-check
-:
-:
-(
-EXIT_ON_ERROR
-)
-\
-for
-f
-in
-(
-subst
-.
-cpp
-(
-CPP_UNIT_TESTS
-)
-)
-;
-do
-\
-XPCOM_DEBUG_BREAK
-=
-stack
--
-and
--
-abort
-(
-RUN_TEST_PROGRAM
-)
-(
-DIST
-)
-/
-bin
-/
-f
-;
-\
-done
-endif
-endif
