Tests for Bug 473417 - updater.exe window is blank, and doesn't close. r=ted.mielczarek
UltraBlame original commit: f8009c23d516542fe3cdf70003603b29d3070647

--- a/toolkit/mozapps/update/Makefile.in
+++ b/toolkit/mozapps/update/Makefile.in
@@ -435,10 +435,20 @@ public
 src
 ifdef
 ENABLE_TESTS
+#
+Update
+tests
+require
+the
+updater
+binary
+ifdef
+MOZ_UPDATER
 DIRS
 +
 =
 test
+endif
 endif
 include
 (
