Fix error running tests for bug 473417 on Thunderbird Mac tinderbox
UltraBlame original commit: 8a0a89771a31722abb09785f107af3c65190868e

--- a/toolkit/mozapps/update/test/Makefile.in
+++ b/toolkit/mozapps/update/test/Makefile.in
@@ -635,11 +635,25 @@ to
 test
 bug
 473417
+on
+Windows
 .
+ifeq
+(
+(
+OS_ARCH
+)
+WINNT
+)
 bug473417dir
 =
 test_bug473417
 -
+else
+bug473417dir
+=
+test_bug473417
+endif
 libs
 :
 :
