Bug 469923 - Support X-Content-Duration for improved duration retrieval for Ogg media - r+sr=roc
UltraBlame original commit: 23c281c1130a81ed46012772062d092afb73e5d5

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -522,6 +522,30 @@ test_can_play_type_ogg
 .
 html
 \
+test_contentDuration1
+.
+html
+\
+test_contentDuration2
+.
+html
+\
+test_contentDuration3
+.
+html
+\
+test_contentDuration4
+.
+html
+\
+test_contentDuration5
+.
+html
+\
+test_contentDuration6
+.
+html
+\
 test_duration1
 .
 html
@@ -590,6 +614,30 @@ bug461281
 ogg
 \
 redirect
+.
+sjs
+\
+contentDuration1
+.
+sjs
+\
+contentDuration2
+.
+sjs
+\
+contentDuration3
+.
+sjs
+\
+contentDuration4
+.
+sjs
+\
+contentDuration5
+.
+sjs
+\
+contentDuration6
 .
 sjs
 \
