Bug 476448 -KPIC is obsolete in Sun Studio 12 SPARC r=jim
UltraBlame original commit: 0ebeefbbdac0a7028c7e3616822fcb7f2cc36cce

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -8810,6 +8810,100 @@ solaris
 HOST_OS_ARCH
 =
 SunOS
+SOLARIS_SUNPRO_CC
+=
+SOLARIS_SUNPRO_CXX
+=
+if
+test
+-
+z
+"
+GNU_CC
+"
+;
+then
+if
+test
+"
+_SUBDIR_CC
+-
+V
+2
+>
+&
+1
+|
+grep
+-
+c
+'
+Sun
+C
+'
+"
+!
+=
+"
+0
+"
+;
+then
+SOLARIS_SUNPRO_CC
+=
+1
+fi
+fi
+if
+test
+-
+z
+"
+GNU_CXX
+"
+;
+then
+if
+test
+"
+_SUBDIR_CXX
+-
+V
+2
+>
+&
+1
+|
+grep
+-
+c
+'
+Sun
+C
++
++
+'
+"
+!
+=
+"
+0
+"
+;
+then
+SOLARIS_SUNPRO_CXX
+=
+1
+fi
+fi
+AC_SUBST
+(
+SOLARIS_SUNPRO_CC
+)
+AC_SUBST
+(
+SOLARIS_SUNPRO_CXX
+)
 ;
 ;
 BSD_386
@@ -10276,6 +10370,122 @@ DMOZILLA_CLIENT
 _USE_CPP_INCLUDE_FLAG
 =
 1
+elif
+test
+"
+SOLARIS_SUNPRO_CC
+"
+;
+then
+MKSHLIB
+=
+'
+(
+LD
+)
+(
+DSO_LDOPTS
+)
+-
+h
+-
+o
+'
+MKCSHLIB
+=
+'
+(
+LD
+)
+(
+DSO_LDOPTS
+)
+-
+h
+-
+o
+'
+DSO_LDOPTS
+=
+'
+-
+shared
+'
+if
+test
+"
+GNU_LD
+"
+;
+then
+#
+Don
+'
+t
+allow
+undefined
+symbols
+in
+libraries
+DSO_LDOPTS
+=
+"
+DSO_LDOPTS
+-
+z
+defs
+"
+fi
+DSO_CFLAGS
+=
+'
+'
+if
+test
+"
+CPU_ARCH
+"
+=
+"
+sparc
+"
+;
+then
+#
+for
+Sun
+Studio
+on
+Solaris
+/
+SPARC
+DSO_PIC_CFLAGS
+=
+'
+-
+xcode
+=
+pic32
+'
+else
+DSO_PIC_CFLAGS
+=
+'
+-
+KPIC
+'
+fi
+_DEFINES_CFLAGS
+=
+'
+(
+ACDEFINES
+)
+-
+D_MOZILLA_CONFIG_H_
+-
+DMOZILLA_CLIENT
+'
 else
 MKSHLIB
 =
@@ -17579,10 +17789,8 @@ ORIGIN
 "
 if
 test
--
-z
 "
-GNU_CC
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -17604,18 +17812,6 @@ AC_DEFINE
 (
 NSCAP_DISABLE_DEBUG_PTR_TYPES
 )
-if
-test
-"
-CPU_ARCH
-"
-!
-=
-"
-sparc
-"
-;
-then
 CFLAGS
 =
 "
@@ -17648,55 +17844,6 @@ tmplife
 -
 norunpath
 "
-else
-#
-Do
-not
-use
--
-xbuiltin
-on
-SPARC
-to
-get
-around
-a
-bug
-of
-compiler
-CFLAGS
-=
-"
-CFLAGS
--
-xlibmieee
--
-xstrconst
--
-xbuiltin
-=
-%
-none
-"
-CXXFLAGS
-=
-"
-CXXFLAGS
--
-xlibmieee
--
-xbuiltin
-=
-%
-none
--
-features
-=
-tmplife
--
-norunpath
-"
-fi
 LDFLAGS
 =
 "
@@ -18005,12 +18152,17 @@ AC_MSG_CHECKING
 (
 [
 for
-Forte
+Sun
+C
++
++
 compiler
 version
 >
 =
-WS6U2
+5
+.
+9
 ]
 )
 AC_LANG_SAVE
@@ -18025,7 +18177,7 @@ if
 (
 __SUNPRO_CC
 <
-0x530
+0x590
 )
 #
 error
@@ -18058,9 +18210,18 @@ no
 AC_MSG_ERROR
 (
 [
-Forte
-version
-WS6U2
+Sun
+C
++
++
+5
+.
+9
+(
+Sun
+Studio
+12
+)
 or
 higher
 is
@@ -18072,7 +18233,7 @@ Your
 compiler
 version
 is
-CC_VERSION
+CXX_VERSION
 .
 ]
 )
@@ -21834,28 +21995,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -23715,9 +23856,8 @@ _REENTRANT
 )
 if
 test
-!
 "
-GNU_CC
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -38240,28 +38380,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -40454,28 +40574,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -40595,28 +40695,8 @@ rules
 mk
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
