--- a/configure.in
+++ b/configure.in
@@ -9597,6 +9597,100 @@ solaris
 HOST_OS_ARCH
 =
 SunOS
+SOLARIS_SUNPRO_CC
+=
+SOLARIS_SUNPRO_CXX
+=
+if
+test
+-
+z
+"
+GNU_CC
+"
+;
+then
+if
+test
+"
+_SUBDIR_CC
+-
+V
+2
+>
+&
+1
+|
+grep
+-
+c
+'
+Sun
+C
+'
+"
+!
+=
+"
+0
+"
+;
+then
+SOLARIS_SUNPRO_CC
+=
+1
+fi
+fi
+if
+test
+-
+z
+"
+GNU_CXX
+"
+;
+then
+if
+test
+"
+_SUBDIR_CXX
+-
+V
+2
+>
+&
+1
+|
+grep
+-
+c
+'
+Sun
+C
++
++
+'
+"
+!
+=
+"
+0
+"
+;
+then
+SOLARIS_SUNPRO_CXX
+=
+1
+fi
+fi
+AC_SUBST
+(
+SOLARIS_SUNPRO_CC
+)
+AC_SUBST
+(
+SOLARIS_SUNPRO_CXX
+)
 ;
 ;
 BSD_386
@@ -11060,6 +11154,122 @@ DMOZILLA_CLIENT
 _USE_CPP_INCLUDE_FLAG
 =
 1
+elif
+test
+"
+SOLARIS_SUNPRO_CC
+"
+;
+then
+MKSHLIB
+=
+'
+(
+LD
+)
+(
+DSO_LDOPTS
+)
+-
+h
+-
+o
+'
+MKCSHLIB
+=
+'
+(
+LD
+)
+(
+DSO_LDOPTS
+)
+-
+h
+-
+o
+'
+DSO_LDOPTS
+=
+'
+-
+shared
+'
+if
+test
+"
+GNU_LD
+"
+;
+then
+#
+Don
+'
+t
+allow
+undefined
+symbols
+in
+libraries
+DSO_LDOPTS
+=
+"
+DSO_LDOPTS
+-
+z
+defs
+"
+fi
+DSO_CFLAGS
+=
+'
+'
+if
+test
+"
+CPU_ARCH
+"
+=
+"
+sparc
+"
+;
+then
+#
+for
+Sun
+Studio
+on
+Solaris
+/
+SPARC
+DSO_PIC_CFLAGS
+=
+'
+-
+xcode
+=
+pic32
+'
+else
+DSO_PIC_CFLAGS
+=
+'
+-
+KPIC
+'
+fi
+_DEFINES_CFLAGS
+=
+'
+(
+ACDEFINES
+)
+-
+D_MOZILLA_CONFIG_H_
+-
+DMOZILLA_CLIENT
+'
 else
 MKSHLIB
 =
@@ -19347,10 +19557,8 @@ MOZ_MEMORY
 1
 if
 test
--
-z
 "
-GNU_CC
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -19372,18 +19580,6 @@ AC_DEFINE
 (
 NSCAP_DISABLE_DEBUG_PTR_TYPES
 )
-if
-test
-"
-CPU_ARCH
-"
-!
-=
-"
-sparc
-"
-;
-then
 CFLAGS
 =
 "
@@ -19416,55 +19612,6 @@ tmplife
 -
 norunpath
 "
-else
-#
-Do
-not
-use
--
-xbuiltin
-on
-SPARC
-to
-get
-around
-a
-bug
-of
-compiler
-CFLAGS
-=
-"
-CFLAGS
--
-xlibmieee
--
-xstrconst
--
-xbuiltin
-=
-%
-none
-"
-CXXFLAGS
-=
-"
-CXXFLAGS
--
-xlibmieee
--
-xbuiltin
-=
-%
-none
--
-features
-=
-tmplife
--
-norunpath
-"
-fi
 LDFLAGS
 =
 "
@@ -19773,12 +19920,17 @@ AC_MSG_CHECKING
 (
 [
 for
-Forte
+Sun
+C
++
++
 compiler
 version
 >
 =
-WS6U2
+5
+.
+9
 ]
 )
 AC_LANG_SAVE
@@ -19793,7 +19945,7 @@ if
 (
 __SUNPRO_CC
 <
-0x530
+0x590
 )
 #
 error
@@ -19826,9 +19978,18 @@ no
 AC_MSG_ERROR
 (
 [
-Forte
-version
-WS6U2
+Sun
+C
++
++
+5
+.
+9
+(
+Sun
+Studio
+12
+)
 or
 higher
 is
@@ -19840,7 +20001,7 @@ Your
 compiler
 version
 is
-CC_VERSION
+CXX_VERSION
 .
 ]
 )
@@ -23116,28 +23277,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -26038,9 +26179,8 @@ _REENTRANT
 )
 if
 test
-!
 "
-GNU_CC
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -61323,28 +61463,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -63343,28 +63463,8 @@ on
 Solaris
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
@@ -63484,28 +63584,8 @@ rules
 mk
 if
 test
--
-z
 "
-GNU_CC
-"
-&
-&
-test
--
-z
-"
-GNU_CXX
-"
-&
-&
-test
-"
-OS_ARCH
-"
-=
-"
-SunOS
+SOLARIS_SUNPRO_CC
 "
 ;
 then
