--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -1259,6 +1259,16 @@ TARGET_DEVICE
 TARGET_DEVICE
 #
 For
+Solaris
+build
+SOLARIS_SUNPRO_CC
+=
+SOLARIS_SUNPRO_CC
+SOLARIS_SUNPRO_CXX
+=
+SOLARIS_SUNPRO_CXX
+#
+For
 AIX
 build
 AIX_OBJMODEL
