--- a/widget/tests/Makefile.in
+++ b/widget/tests/Makefile.in
@@ -402,7 +402,7 @@ relativesrcdir
 =
 widget
 /
-test
+tests
 include
 (
 DEPTH
@@ -413,6 +413,58 @@ config
 autoconf
 .
 mk
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+windows
+)
+ifneq
+(
+(
+OS_ARCH
+)
+WINCE
+)
+CPP_UNIT_TESTS
++
+=
+TestWinTSF
+.
+cpp
+\
+(
+NULL
+)
+REQUIRES
++
+=
+appshell
+content
+docshell
+\
+dom
+embed_base
+gfx
+layout
+locale
+\
+necko
+string
+thebes
+uriloader
+view
+\
+webbrwsr
+widget
+xpcom
+\
+(
+NULL
+)
+endif
+endif
 include
 (
 topsrcdir
