[OS/2] Bug 474020: add AVMPLUS_OS2 to get through the js's configure, r=ted.mielczarek
UltraBlame original commit: 060afee65a8e865fc55a4ddc2034e636d1897c53

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -19459,6 +19459,16 @@ AVMPLUS_WIN32
 ;
 ;
 *
+os2
+*
+)
+AC_DEFINE
+(
+AVMPLUS_OS2
+)
+;
+;
+*
 )
 AC_MSG_ERROR
 (
@@ -19466,6 +19476,19 @@ AC_MSG_ERROR
 Unrecognized
 nanojit
 platform
+.
+Use
+-
+-
+disable
+-
+jit
+to
+build
+without
+JIT
+support
+.
 ]
 )
 esac
