Backing out the TSF patch of bug 88831. This might cause a timeout failure on test_keycodes.xul
UltraBlame original commit: c823439c14090689cb9e170b41a6197b490cff86

--- a/widget/tests/Makefile.in
+++ b/widget/tests/Makefile.in
@@ -402,7 +402,7 @@ relativesrcdir
 =
 widget
 /
-tests
+test
 include
 (
 DEPTH
@@ -413,58 +413,6 @@ config
 autoconf
 .
 mk
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-windows
-)
-ifneq
-(
-(
-OS_ARCH
-)
-WINCE
-)
-CPP_UNIT_TESTS
-+
-=
-TestWinTSF
-.
-cpp
-\
-(
-NULL
-)
-REQUIRES
-+
-=
-appshell
-content
-docshell
-\
-dom
-embed_base
-gfx
-layout
-locale
-\
-necko
-string
-thebes
-uriloader
-view
-\
-webbrwsr
-widget
-xpcom
-\
-(
-NULL
-)
-endif
-endif
 include
 (
 topsrcdir
