Bug 466745: Upgraded NSS to NSS_3_12_3_BETA3.
UltraBlame original commit: 8334582740d7c159cb191583b21a0504c575cb47

--- a/security/nss/tests/chains/scenarios/realcerts.cfg
+++ b/security/nss/tests/chains/scenarios/realcerts.cfg
@@ -40,6 +40,11 @@ PayPalEE
 :
 x
 :
+import
+BrAirWaysBadSig
+:
+x
+:
 verify
 TestUser50
 :
@@ -78,3 +83,9 @@ OID
 6
 result
 pass
+verify
+BrAirWaysBadSig
+:
+x
+result
+fail
