bug 477572 - Properly support indeterminate checkboxes with the right a11y notifications, r=surkov, sr=roc
UltraBlame original commit: 61880bdd459489bce737710d1412602ca60577e6

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -618,10 +618,6 @@ test_nsIAccessible_selects
 .
 html
 \
-test_nsIAccessible_states
-.
-html
-\
 test_nsIAccessible_focus
 .
 html
@@ -701,6 +697,10 @@ test_role_nsHyperTextAcc
 html
 \
 test_role_table_cells
+.
+html
+\
+test_states
 .
 html
 \
