b=477727; fix shell service and disable migration browser component for Windows CE; r=gavin
UltraBlame original commit: be1b0898ed40572494416f5e2505b5f9c72cbaba

--- a/browser/app/Makefile.in
+++ b/browser/app/Makefile.in
@@ -1086,6 +1086,16 @@ a
 console
 application
 .
+ifdef
+WINCE
+WIN32_EXE_LDFLAGS
++
+=
+-
+ENTRY
+:
+mainWCRTStartup
+else
 WIN32_EXE_LDFLAGS
 +
 =
@@ -1093,6 +1103,18 @@ WIN32_EXE_LDFLAGS
 ENTRY
 :
 wmainCRTStartup
+endif
+endif
+ifdef
+WINCE
+EXTRA_DSO_LDOPTS
++
+=
+(
+call
+EXPAND_LIBNAME
+corelibc
+)
 endif
 ifdef
 BUILD_STATIC_LIBS
@@ -1614,6 +1636,7 @@ filter
 out
 OS2
 WINNT
+WINCE
 (
 OS_ARCH
 )
