--- a/intl/uconv/src/charsetalias.properties
+++ b/intl/uconv/src/charsetalias.properties
@@ -1214,7 +1214,7 @@ x
 -
 mac
 -
-ukrainian
+cyrillic
 x
 -
 mac
@@ -3496,63 +3496,6 @@ cp1258
 windows
 -
 1258
-#
-Tempory
-charset
-for
-testing
-purpose
-.
-Should
-be
-remove
-before
-Beta
-x
--
-obsoleted
--
-shift_jis
-=
-x
--
-obsoleted
--
-Shift_JIS
-x
--
-obsoleted
--
-iso
--
-2022
--
-jp
-=
-x
--
-obsoleted
--
-ISO
--
-2022
--
-JP
-x
--
-obsoleted
--
-euc
--
-jp
-=
-x
--
-obsoleted
--
-EUC
--
-JP
 x
 -
 gbk
