Bug 435743: Extensions and updates signed by any installed CA should be accepted (tests). r=robstrong
UltraBlame original commit: 9b79ff7b47074402a7f2a1616966fe54f2ac34e7

--- a/toolkit/mozapps/extensions/test/Makefile.in
+++ b/toolkit/mozapps/extensions/test/Makefile.in
@@ -455,6 +455,15 @@ TESTROOT
 unit
 /
 addons
+relativesrcdir
+=
+toolkit
+/
+mozapps
+/
+extensions
+/
+test
 include
 (
 DEPTH
@@ -476,6 +485,32 @@ unit
 (
 NULL
 )
+_CHROME_FILES
+=
+\
+test_bug435743_1
+.
+xul
+\
+test_bug435743_2
+.
+xul
+\
+bug435743
+.
+rdf
+\
+bug435743
+.
+xpi
+\
+bug435743
+.
+sjs
+\
+(
+NULL
+)
 include
 (
 topsrcdir
@@ -486,6 +521,38 @@ config
 rules
 .
 mk
+libs
+:
+:
+(
+_CHROME_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+chrome
+/
+(
+relativesrcdir
+)
 libs
 :
 :
