--- a/xpinstall/tests/Makefile.in
+++ b/xpinstall/tests/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -142,15 +141,10 @@ The
 Original
 Code
 is
-Mozilla
-Communicator
-client
+mozilla
+.
+org
 code
-released
-#
-March
-31
-1998
 .
 #
 #
@@ -163,9 +157,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+Foundation
 .
 #
 Portions
@@ -179,7 +172,7 @@ Copyright
 (
 C
 )
-1998
+2008
 #
 the
 Initial
@@ -196,42 +189,6 @@ Contributor
 s
 )
 :
-#
-Daniel
-Veditz
-<
-dveditz
-netscape
-.
-com
->
-#
-Douglas
-Turner
-<
-dougt
-netscape
-.
-com
->
-#
-Samir
-Gehani
-<
-sgehani
-netscape
-.
-com
->
-#
-Dave
-Townsend
-<
-dtownsend
-oxymoronical
-.
-com
->
 #
 #
 Alternatively
@@ -428,6 +385,9 @@ DEPTH
 =
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -437,6 +397,11 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+xpinstall
+/
+tests
 include
 (
 DEPTH
@@ -447,20 +412,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-xpinstall
-DIRS
-=
-public
-src
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-tests
-endif
 include
 (
 topsrcdir
@@ -471,3 +422,244 @@ config
 rules
 .
 mk
+_BROWSER_FILES
+=
+harness
+.
+js
+\
+browser_unsigned_url
+.
+js
+\
+browser_unsigned_trigger
+.
+js
+\
+browser_whitelist
+.
+js
+\
+browser_whitelist2
+.
+js
+\
+browser_whitelist3
+.
+js
+\
+browser_whitelist4
+.
+js
+\
+browser_whitelist5
+.
+js
+\
+browser_whitelist6
+.
+js
+\
+browser_hash
+.
+js
+\
+browser_badhash
+.
+js
+\
+browser_badhashtype
+.
+js
+\
+browser_signed_url
+.
+js
+\
+browser_signed_trigger
+.
+js
+\
+browser_signed_untrusted
+.
+js
+\
+browser_signed_tampered
+.
+js
+\
+browser_signed_multiple
+.
+js
+\
+browser_empty
+.
+js
+\
+browser_corrupt
+.
+js
+\
+browser_cookies
+.
+js
+\
+browser_cookies2
+.
+js
+\
+browser_cookies3
+.
+js
+\
+browser_cookies4
+.
+js
+\
+browser_enabled
+.
+js
+\
+browser_enabled2
+.
+js
+\
+browser_enabled3
+.
+js
+\
+browser_softwareupdate
+.
+js
+\
+browser_installchrome
+.
+js
+\
+browser_opendialog
+.
+js
+\
+browser_localfile
+.
+js
+\
+browser_localfile2
+.
+js
+\
+browser_auth
+.
+js
+\
+browser_auth2
+.
+js
+\
+browser_auth3
+.
+js
+\
+browser_offline
+.
+js
+\
+browser_chrome
+.
+js
+\
+browser_cancel
+.
+js
+\
+unsigned
+.
+xpi
+\
+signed
+.
+xpi
+\
+signed2
+.
+xpi
+\
+signed
+-
+untrusted
+.
+xpi
+\
+signed
+-
+tampered
+.
+xpi
+\
+empty
+.
+xpi
+\
+corrupt
+.
+xpi
+\
+enabled
+.
+html
+\
+installtrigger
+.
+html
+\
+startsoftwareupdate
+.
+html
+\
+installchrome
+.
+html
+\
+authRedirect
+.
+sjs
+\
+cookieRedirect
+.
+sjs
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_BROWSER_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+/
+(
+relativesrcdir
+)
