--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -439,6 +439,51 @@ rules
 .
 mk
 #
+We
+'
+re
+installing
+to
+_tests
+/
+testing
+/
+mochitest
+so
+this
+is
+the
+depth
+#
+necessary
+for
+relative
+objdir
+paths
+.
+TARGET_DEPTH
+=
+.
+.
+/
+.
+.
+/
+.
+.
+include
+(
+topsrcdir
+)
+/
+build
+/
+automation
+-
+build
+.
+mk
+#
 files
 that
 get
@@ -563,353 +608,6 @@ _tests
 (
 relativesrcdir
 )
-_PROFILE_DIR
-=
-(
-DEPTH
-)
-/
-_profile
-/
-pgo
-_CERTS_SRC_DIR
-=
-(
-topsrcdir
-)
-/
-build
-/
-pgo
-/
-certs
-ifeq
-(
-(
-USE_SHORT_LIBNAME
-)
-1
-)
-PROGRAM
-=
-(
-MOZ_APP_NAME
-)
-(
-BIN_SUFFIX
-)
-else
-PROGRAM
-=
-(
-MOZ_APP_NAME
-)
--
-bin
-(
-BIN_SUFFIX
-)
-endif
-ifeq
-(
-(
-MOZ_BUILD_APP
-)
-camino
-)
-browser_path
-=
-\
-"
-.
-.
-/
-(
-DIST
-)
-/
-Camino
-.
-app
-/
-Contents
-/
-MacOS
-/
-Camino
-\
-"
-else
-ifeq
-(
-(
-OS_ARCH
-)
-Darwin
-)
-ifdef
-MOZ_DEBUG
-browser_path
-=
-\
-"
-.
-.
-/
-(
-DIST
-)
-/
-(
-MOZ_APP_DISPLAYNAME
-)
-Debug
-.
-app
-/
-Contents
-/
-MacOS
-/
-(
-PROGRAM
-)
-\
-"
-else
-browser_path
-=
-\
-"
-.
-.
-/
-(
-DIST
-)
-/
-(
-MOZ_APP_DISPLAYNAME
-)
-.
-app
-/
-Contents
-/
-MacOS
-/
-(
-PROGRAM
-)
-\
-"
-endif
-else
-browser_path
-=
-\
-"
-.
-.
-/
-(
-DIST
-)
-/
-bin
-/
-(
-PROGRAM
-)
-\
-"
-endif
-endif
-#
-These
-go
-in
-_tests
-/
-so
-they
-need
-to
-go
-up
-an
-extra
-path
-segement
-TEST_DRIVER_PPARGS
-=
-\
--
-DBROWSER_PATH
-=
-(
-browser_path
-)
-\
--
-DXPC_BIN_PATH
-=
-\
-"
-(
-LIBXUL_DIST
-)
-/
-bin
-\
-"
-\
--
-DBIN_SUFFIX
-=
-\
-"
-(
-BIN_SUFFIX
-)
-\
-"
-\
--
-DPROFILE_DIR
-=
-\
-"
-.
-.
-/
-(
-_PROFILE_DIR
-)
-\
-"
-\
--
-DCERTS_SRC_DIR
-=
-\
-"
-(
-_CERTS_SRC_DIR
-)
-\
-"
-\
-(
-NULL
-)
-ifeq
-(
-(
-OS_ARCH
-)
-Darwin
-)
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_MAC
-=
-1
-else
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_MAC
-=
-0
-endif
-ifeq
-(
-(
-MOZ_BUILD_APP
-)
-camino
-)
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_CAMINO
-=
-1
-else
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_CAMINO
-=
-0
-endif
-ifeq
-(
-(
-host_os
-)
-cygwin
-)
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_CYGWIN
-=
-1
-endif
-ifeq
-(
-(
-ENABLE_TESTS
-)
-1
-)
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_TEST_BUILD
-=
-1
-else
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_TEST_BUILD
-=
-0
-endif
-ifeq
-(
-(
-MOZ_DEBUG
-)
-1
-)
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_DEBUG_BUILD
-=
-1
-else
-TEST_DRIVER_PPARGS
-+
-=
--
-DIS_DEBUG_BUILD
-=
-0
-endif
 runtests
 .
 py
@@ -932,50 +630,6 @@ Preprocessor
 .
 py
 \
-(
-TEST_DRIVER_PPARGS
-)
-(
-DEFINES
-)
-(
-ACDEFINES
-)
-^
->
-automation
-.
-py
-:
-(
-topsrcdir
-)
-/
-build
-/
-pgo
-/
-automation
-.
-py
-.
-in
-(
-PYTHON
-)
-(
-topsrcdir
-)
-/
-config
-/
-Preprocessor
-.
-py
-\
-(
-TEST_DRIVER_PPARGS
-)
 (
 DEFINES
 )
@@ -987,10 +641,10 @@ ACDEFINES
 GARBAGE
 +
 =
-runtests
+automation
 .
 py
-automation
+runtests
 .
 py
 libs
