b=477727; add WINCE_WINDOWS_MOBILE define and associated configure flag; r=ted
UltraBlame original commit: b0d84b409d1b3224c4a06395b623f23ce46c78c4

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -2060,6 +2060,9 @@ WINCE
 WINCE_SDK_DIR
 =
 WINCE_SDK_DIR
+WINCE_WINDOWS_MOBILE
+=
+WINCE_WINDOWS_MOBILE
 MOZ_DISTRIBUTION_ID
 =
 MOZ_DISTRIBUTION_ID
