--- a/js/src/shell/Makefile.in
+++ b/js/src/shell/Makefile.in
@@ -474,6 +474,19 @@ topsrcdir
 I
 .
 .
+ifdef
+_MSC_VER
+ifdef
+WINCE
+WIN32_EXE_LDFLAGS
++
+=
+-
+ENTRY
+:
+mainACRTStartup
+endif
+endif
 include
 (
 topsrcdir
