--- a/js/src/xpconnect/shell/Makefile.in
+++ b/js/src/xpconnect/shell/Makefile.in
@@ -503,6 +503,19 @@ NULL
 NSDISTMODE
 =
 copy
+ifdef
+_MSC_VER
+ifdef
+WINCE
+WIN32_EXE_LDFLAGS
++
+=
+-
+ENTRY
+:
+mainACRTStartup
+endif
+endif
 include
 (
 topsrcdir
