--- a/configure.in
+++ b/configure.in
@@ -2370,13 +2370,71 @@ The
 path
 to
 the
-windows
-mobile
-sdk
+Windows
+CE
+SDK
 ]
 WINCE_SDK_DIR
 =
 withval
+)
+dnl
+Default
+to
+Windows
+Mobile
+components
+enabled
+WINCE_WINDOWS_MOBILE
+=
+1
+MOZ_ARG_DISABLE_BOOL
+(
+windows
+-
+mobile
+-
+components
+[
+-
+-
+disable
+-
+windows
+-
+mobile
+-
+components
+Disable
+Windows
+Mobile
+specific
+components
+from
+CE
+build
+]
+WINCE_WINDOWS_MOBILE
+=
+WINCE_WINDOWS_MOBILE
+=
+1
+)
+if
+test
+"
+WINCE_WINDOWS_MOBILE
+"
+;
+then
+AC_DEFINE
+(
+WINCE_WINDOWS_MOBILE
+)
+fi
+AC_SUBST
+(
+WINCE_WINDOWS_MOBILE
 )
 export
 WINCE
@@ -2563,6 +2621,33 @@ arm
 wince
 -
 gcc
+-
+E
+-
+nologo
+"
+CXXCPP
+=
+"
+_pwd
+/
+dist
+/
+sdk
+/
+bin
+/
+arm
+-
+wince
+-
+gcc
+-
+TP
+-
+E
+-
+nologo
 "
 LD
 =
@@ -15994,6 +16079,61 @@ Mozilla
 MOZ_GFX_OPTIMIZE_MOBILE
 =
 1
+#
+Sanity
+check
+for
+WINCE_WINDOWS_MOBILE
+if
+test
+"
+WINCE_WINDOWS_MOBILE
+"
+;
+then
+AC_CHECK_HEADER
+(
+tpcshell
+.
+h
+[
+]
+AC_MSG_ERROR
+(
+[
+Can
+'
+t
+find
+tpcshell
+.
+h
+in
+your
+SDK
+;
+are
+you
+sure
+you
+don
+'
+t
+need
+-
+-
+disable
+-
+windos
+-
+mobile
+-
+components
+?
+]
+)
+)
+fi
 ;
 ;
 *
