b=478140; set some WinCE all.js defaults; r=stuart
UltraBlame original commit: cbb09b7c15e9b0df486ff951fb52bf2447d4d968

--- a/modules/libpref/src/Makefile.in
+++ b/modules/libpref/src/Makefile.in
@@ -528,6 +528,32 @@ MOZ_WIDGET_TOOLKIT
 (
 NULL
 )
+#
+this
+comes
+from
+a
+system
+header
+;
+we
+should
+probably
+be
+using
+XP_WINCE
+or
+something
+ifdef
+WINCE
+DEFINES
++
+=
+-
+DWINCE
+=
+1
+endif
 PREF_JS_EXPORTS
 =
 (
