--- a/editor/libeditor/text/tests/Makefile.in
+++ b/editor/libeditor/text/tests/Makefile.in
@@ -158,8 +158,7 @@ Original
 Code
 is
 #
-Netscape
-Communications
+Mozilla
 Corporation
 .
 #
@@ -174,7 +173,7 @@ Copyright
 (
 C
 )
-1998
+2009
 #
 the
 Initial
@@ -206,6 +205,7 @@ under
 the
 terms
 of
++
 #
 either
 of
@@ -393,6 +393,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -402,6 +405,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+editor
+/
+libeditor
+/
+text
+/
+tests
 include
 (
 DEPTH
@@ -412,121 +424,6 @@ config
 autoconf
 .
 mk
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-tests
-endif
-MODULE
-=
-editor
-LIBRARY_NAME
-=
-texteditor_s
-LIBXUL_LIBRARY
-=
-1
-REQUIRES
-=
-xpcom
-\
-string
-\
-dom
-\
-locale
-\
-layout
-\
-content
-\
-txmgr
-\
-txtsvc
-\
-necko
-\
-pref
-\
-lwbrk
-\
-view
-\
-gfx
-\
-thebes
-\
-widget
-\
-unicharutil
-\
-(
-NULL
-)
-CPPSRCS
-=
-\
-nsPlaintextDataTransfer
-.
-cpp
-\
-nsPlaintextEditor
-.
-cpp
-\
-nsTextEditUtils
-.
-cpp
-\
-nsTextEditRules
-.
-cpp
-\
-nsEditorEventListeners
-.
-cpp
-\
-nsWrapUtils
-.
-cpp
-\
-nsInternetCiter
-.
-cpp
-\
-nsAOLCiter
-.
-cpp
-\
-nsTextEditRulesBidi
-.
-cpp
-\
-(
-NULL
-)
-#
-don
-'
-t
-want
-the
-shared
-lib
-;
-force
-the
-creation
-of
-a
-static
-lib
-.
-FORCE_STATIC_LIB
-=
-1
 include
 (
 topsrcdir
@@ -537,34 +434,45 @@ config
 rules
 .
 mk
-INCLUDES
-+
+_TEST_FILES
 =
 \
--
-I
-(
-topsrcdir
-)
-/
-editor
-/
-libeditor
-/
-base
-\
--
-I
-(
-topsrcdir
-)
-/
-content
-/
-base
-/
-src
+test_bug471722
+.
+html
 \
 (
 NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
 )
