--- a/toolkit/components/places/tests/browser/browser.ini
+++ b/toolkit/components/places/tests/browser/browser.ini
@@ -95,6 +95,18 @@ browser_notfound
 js
 ]
 [
+browser_onvisit_title_null_for_navigation
+.
+js
+]
+support
+-
+files
+=
+empty_page
+.
+html
+[
 browser_redirect
 .
 js
