Bug 1343068 - Add the JNI generate files in the list of ignored elements r=mystor
MozReview-Commit-ID: CcNVKLrUQW6

UltraBlame original commit: 1ccc6b10d0ffe385284ca06c460211907a96f2c3

--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -44,6 +44,30 @@ tests
 /
 .
 *
+^
+widget
+/
+android
+/
+GeneratedJNINatives
+.
+h
+^
+widget
+/
+android
+/
+GeneratedJNIWrappers
+.
+cpp
+^
+widget
+/
+android
+/
+GeneratedJNIWrappers
+.
+h
 #
 Generated
 from
