Bug 1271457 - Add use counters for non-standard IDB extensions. r=janv, r=qDot
UltraBlame original commit: 52f57ab9685b7cbcefae349ff305d899f884a223

--- a/dom/base/UseCounters.conf
+++ b/dom/base/UseCounters.conf
@@ -469,6 +469,29 @@ OfflineResourceList
 onobsolete
 /
 /
+Non
+-
+standard
+IndexedDB
+API
+method
+IDBDatabase
+.
+createMutableFile
+method
+IDBDatabase
+.
+mozCreateFileHandle
+method
+IDBMutableFile
+.
+open
+method
+IDBMutableFile
+.
+getFile
+/
+/
 DataTransfer
 API
 (
