Bug 1343166 - Update test expectation for servo/servo#15761.
UltraBlame original commit: f4ba72d50ec0856cb9dbea24a8dd3be4451aebb9

--- a/layout/style/test/mochitest.ini
+++ b/layout/style/test/mochitest.ini
@@ -1786,17 +1786,26 @@ skip
 -
 if
 =
+(
 toolkit
 =
 =
 '
 android
 '
+|
+|
+stylo
+)
 #
 bug
 775227
 for
 android
+bug
+1343168
+for
+stylo
 [
 test_value_computation
 .
