Bug 1343166 - Disable another two tests for crash.
UltraBlame original commit: 1257608f7fc6e4a73b6110dac7f7622ff385077a

--- a/layout/style/test/mochitest.ini
+++ b/layout/style/test/mochitest.ini
@@ -1815,17 +1815,35 @@ skip
 -
 if
 =
+(
 toolkit
 =
 =
 '
 android
 '
+|
+|
+stylo
+)
+#
+bug
+1343168
+for
+stylo
 [
 test_value_storage
 .
 html
 ]
+skip
+-
+if
+=
+stylo
+#
+bug
+1343168
 [
 test_variable_serialization_computed
 .
