Bug 1343185 - Add the JNI generate files in the list of ignored elements r=mystor
MozReview-Commit-ID: IjrG03eunFU

UltraBlame original commit: f0b24983d137386c8b3b443d3866d7fa7077fa43

--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -68,6 +68,36 @@ android
 GeneratedJNIWrappers
 .
 h
+^
+widget
+/
+android
+/
+fennec
+/
+FennecJNINatives
+.
+h
+^
+widget
+/
+android
+/
+fennec
+/
+FennecJNIWrappers
+.
+cpp
+^
+widget
+/
+android
+/
+fennec
+/
+FennecJNIWrappers
+.
+h
 #
 Generated
 from
