Bug 1343098: Disable non-e10s tests on osx. r=jmaher
Disable non-tests for the following tests as the builder machines have
been turned off:

* web-platform-tests-reftests
* mochitest-webgl
* jsreftest
* reftest

MozReview-Commit-ID: 5KZ3KzT3dLo

UltraBlame original commit: 06c84505c46609120bccca45cedccbc53624d3f9

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -1707,6 +1707,11 @@ ccov
 opt
 :
 false
+macosx
+.
+*
+:
+true
 default
 :
 both
@@ -4835,11 +4840,11 @@ test
 -
 platform
 :
-macosx64
-/
-opt
+macosx
+.
+*
 :
-false
+true
 default
 :
 both
@@ -5296,6 +5301,11 @@ ccov
 opt
 :
 false
+macosx
+.
+*
+:
+true
 default
 :
 both
@@ -7238,6 +7248,11 @@ windows
 *
 :
 false
+macosx
+.
+*
+:
+true
 default
 :
 both
