servo: Merge #15769 - Kill serde_codegen 💣 (from nox:die-codegen-die); r=jdm
Source-Repo: https://github.com/servo/servo
Source-Revision: 74e7afa1c8a0a355e3964a15045840adf7488e78

UltraBlame original commit: ad8230a681a898bf8d52d8b3c33889d33eef8caa

--- a/servo/components/canvas/Cargo.toml
+++ b/servo/components/canvas/Cargo.toml
@@ -159,11 +159,9 @@ path
 config
 "
 }
-[
-dependencies
-.
 webrender_traits
-]
+=
+{
 git
 =
 "
@@ -179,15 +177,11 @@ servo
 /
 webrender
 "
-default
--
-features
-=
-false
 features
 =
 [
 "
-serde_derive
+ipc
 "
 ]
+}
