--- a/servo/ports/glutin/Cargo.toml
+++ b/servo/ports/glutin/Cargo.toml
@@ -229,11 +229,9 @@ components
 style_traits
 "
 }
-[
-dependencies
-.
 webrender_traits
-]
+=
+{
 git
 =
 "
@@ -249,9 +247,14 @@ servo
 /
 webrender
 "
-default_features
+features
 =
-false
+[
+"
+ipc
+"
+]
+}
 [
 target
 .
