--- a/servo/components/webvr/Cargo.toml
+++ b/servo/components/webvr/Cargo.toml
@@ -119,11 +119,9 @@ path
 webvr_traits
 "
 }
-[
-dependencies
-.
 webrender_traits
-]
+=
+{
 git
 =
 "
@@ -139,13 +137,11 @@ servo
 /
 webrender
 "
-default_features
-=
-false
 features
 =
 [
 "
-serde_derive
+ipc
 "
 ]
+}
