Bug 1338375 Part 2: Check that new http browser window opened from file URI page works.
UltraBlame original commit: 08710fe142c895e87acdb1eaea5b420f07faee07

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -143,6 +143,9 @@ window
 open
 .
 html
+file_with_link_to_http
+.
+html
 head
 .
 js
@@ -245,6 +248,45 @@ headers
 zoom_test
 .
 html
+file_install_extensions
+.
+html
+browser_legacy
+.
+xpi
+browser_legacy_webext
+.
+xpi
+browser_webext_permissions
+.
+xpi
+browser_webext_nopermissions
+.
+xpi
+browser_webext_update1
+.
+xpi
+browser_webext_update2
+.
+xpi
+browser_webext_update_icon1
+.
+xpi
+browser_webext_update_icon2
+.
+xpi
+browser_webext_update_perms1
+.
+xpi
+browser_webext_update_perms2
+.
+xpi
+browser_webext_update
+.
+json
+browser_webext_search
+.
+xml
 !
 /
 image
@@ -1518,6 +1560,26 @@ bug
 320638
 .
 [
+browser_extension_permissions
+.
+js
+]
+[
+browser_extension_sideloading
+.
+js
+]
+[
+browser_extension_update_background
+.
+js
+]
+[
+browser_extension_update_interactive
+.
+js
+]
+[
 browser_favicon_change
 .
 js
@@ -1715,6 +1777,11 @@ js
 ]
 [
 browser_modifiedclick_inherit_principal
+.
+js
+]
+[
+browser_new_http_window_opened_from_file_tab
 .
 js
 ]
