Bug 1338567 - Update debugger frontend (2/10/2017) r=jdescottes.
MozReview-Commit-ID: 1Sl9jB0M0af

UltraBlame original commit: e9dcba1a87af814aa7bb81f8233bb5461f8b84a1

--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -108,6 +108,13 @@ examples
 /
 doc
 -
+asm
+.
+html
+examples
+/
+doc
+-
 scripts
 .
 html
@@ -161,6 +168,15 @@ examples
 /
 doc
 -
+return
+-
+values
+.
+html
+examples
+/
+doc
+-
 sourcemaps
 .
 html
@@ -187,6 +203,11 @@ doc
 sources
 .
 html
+examples
+/
+asm
+.
+js
 examples
 /
 bogus
@@ -276,6 +297,13 @@ js
 [
 browser_dbg
 -
+asm
+.
+js
+]
+[
+browser_dbg
+-
 breaking
 .
 js
@@ -291,6 +319,11 @@ console
 .
 js
 ]
+skip
+-
+if
+=
+true
 [
 browser_dbg
 -
@@ -439,6 +472,18 @@ paused
 .
 js
 ]
+[
+browser_dbg
+-
+returnvalues
+.
+js
+]
+skip
+-
+if
+=
+true
 [
 browser_dbg
 -
