Bug 1325778 - Intermittent toolkit/components/passwordmgr/test/mochitest/test_insecure_form_field_autocomplete.html. r=gbrown
MozReview-Commit-ID: 99eVjotuRZ2

UltraBlame original commit: 6b3ce92ad51e9f4569fc300e22a61c4971de6e2a

--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
@@ -285,11 +285,23 @@ toolkit
 '
 android
 '
+|
+|
+os
+=
+=
+'
+linux
+'
 #
 android
 :
 autocomplete
 .
+linux
+:
+bug
+1325778
 [
 test_basic_form_html5
 .
