Bug 1313326 - Part 1: Support recording events in child processes. r=dexter, r=froydnj
UltraBlame original commit: a6db4cae99904cecfc03101a7007a147aca6b1fc

--- a/toolkit/components/telemetry/tests/unit/xpcshell.ini
+++ b/toolkit/components/telemetry/tests/unit/xpcshell.ini
@@ -311,6 +311,16 @@ os
 "
 android
 "
+#
+Disabled
+due
+to
+crashes
+(
+see
+bug
+1331366
+)
 tags
 =
 addons
@@ -377,6 +387,31 @@ test_TelemetryEvents
 .
 js
 ]
+[
+test_ChildEvents
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+#
+Disabled
+due
+to
+crashes
+(
+see
+bug
+1331366
+)
 [
 test_TelemetryModules
 .
