Bug 1313326 - Part 2: Restrict event recording to specified processes. r=dexter
UltraBlame original commit: 223a0be483694b387c57f662a4639da28dab3a97

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -38,6 +38,13 @@ release_channel_collection
 opt
 -
 in
+record_in_processes
+:
+[
+"
+main
+"
+]
 description
 :
 >
@@ -179,6 +186,13 @@ mozilla
 com
 "
 ]
+record_in_processes
+:
+[
+"
+main
+"
+]
 description
 :
 This
@@ -242,6 +256,18 @@ mozilla
 com
 "
 ]
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+[
+"
+main
+"
+]
 description
 :
 This
@@ -256,11 +282,6 @@ entry
 expiry_date
 :
 never
-release_channel_collection
-:
-opt
--
-out
 extra_keys
 :
 key1
@@ -301,6 +322,13 @@ dev
 mozilla
 .
 com
+"
+]
+record_in_processes
+:
+[
+"
+main
 "
 ]
 description
@@ -351,6 +379,13 @@ dev
 mozilla
 .
 com
+"
+]
+record_in_processes
+:
+[
+"
+main
 "
 ]
 description
@@ -421,6 +456,13 @@ release_channel_collection
 opt
 -
 out
+record_in_processes
+:
+[
+"
+main
+"
+]
 expiry_date
 :
 2099
@@ -435,6 +477,185 @@ expiry_version
 .
 0
 "
+main_only
+:
+objects
+:
+[
+"
+object1
+"
+]
+bug_numbers
+:
+[
+1313326
+]
+notification_emails
+:
+[
+"
+telemetry
+-
+client
+-
+dev
+mozilla
+.
+com
+"
+]
+record_in_processes
+:
+[
+"
+main
+"
+]
+description
+:
+This
+event
+is
+used
+to
+test
+main
+-
+process
+only
+recording
+.
+expiry_version
+:
+never
+content_only
+:
+objects
+:
+[
+"
+object1
+"
+]
+bug_numbers
+:
+[
+1313326
+]
+notification_emails
+:
+[
+"
+telemetry
+-
+client
+-
+dev
+mozilla
+.
+com
+"
+]
+record_in_processes
+:
+[
+"
+content
+"
+]
+description
+:
+This
+event
+is
+used
+to
+test
+content
+-
+process
+only
+recording
+.
+expiry_version
+:
+never
+extra_keys
+:
+foo
+:
+This
+is
+just
+a
+test
+description
+.
+bar
+:
+And
+this
+is
+another
+test
+description
+.
+main_and_content
+:
+objects
+:
+[
+"
+object1
+"
+]
+bug_numbers
+:
+[
+1313326
+]
+notification_emails
+:
+[
+"
+telemetry
+-
+client
+-
+dev
+mozilla
+.
+com
+"
+]
+record_in_processes
+:
+[
+"
+main
+"
+"
+content
+"
+]
+description
+:
+This
+event
+is
+used
+to
+test
+main
+and
+content
+process
+recording
+.
+expiry_version
+:
+never
 #
 This
 is
@@ -497,6 +718,13 @@ dev
 mozilla
 .
 com
+"
+]
+record_in_processes
+:
+[
+"
+main
 "
 ]
 description
