Bug 1342963 - only run jsreftests when js/src/* changes. r=dustin
MozReview-Commit-ID: 2stKqaayBHY

UltraBlame original commit: 52a406607871931b102f6dc76ce5eaff75cd8914

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -1908,6 +1908,26 @@ reftest
 suite
 =
 jsreftest
+when
+:
+files
+-
+changed
+:
+-
+js
+/
+src
+/
+*
+*
+-
+js
+/
+public
+/
+*
+*
 marionette
 :
 description
