Bug 1322383 - Add missing checks for valid window r=ato+446296
MozReview-Commit-ID: Ad67SPx8vBx

UltraBlame original commit: 74b0c928a23e261b8976fbbdbcf8e1ab49c57a7c

--- a/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
+++ b/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
@@ -428,6 +428,16 @@ appname
 fennec
 '
 [
+test_window_status_content
+.
+py
+]
+[
+test_window_status_chrome
+.
+py
+]
+[
 test_screenshot
 .
 py
@@ -458,7 +468,7 @@ appname
 fennec
 '
 [
-test_window_type
+test_window_type_chrome
 .
 py
 ]
