Backed out changeset 74b0c928a23e (bug 1322383) for frequent failure rate in marionette tests
UltraBlame original commit: b43926a87603f596da8c5f2cf84df0b7f4b04c53

--- a/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
+++ b/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
@@ -428,16 +428,6 @@ appname
 fennec
 '
 [
-test_window_status_content
-.
-py
-]
-[
-test_window_status_chrome
-.
-py
-]
-[
 test_screenshot
 .
 py
@@ -468,7 +458,7 @@ appname
 fennec
 '
 [
-test_window_type_chrome
+test_window_type
 .
 py
 ]
