Bug 1338539: files with application/manifest+json Mime type should be rendered as json r=Honza
MozReview-Commit-ID: 9SXz6dO7Fms

UltraBlame original commit: 47ae8eb50ef42d3d67d7b6420ae4bd5728af2d69

--- a/devtools/client/jsonview/test/browser.ini
+++ b/devtools/client/jsonview/test/browser.ini
@@ -35,6 +35,15 @@ json
 ^
 headers
 ^
+manifest_json
+.
+json
+manifest_json
+.
+json
+^
+headers
+^
 simple_json
 .
 json
@@ -225,6 +234,11 @@ js
 ]
 [
 browser_jsonview_save_json
+.
+js
+]
+[
+browser_jsonview_manifest
 .
 js
 ]
