Bug 1335608 - add a button to select hidden tools when toolbox toolbar overflows;r=gregtatum
MozReview-Commit-ID: HgfSteV6WXy

UltraBlame original commit: c865b539abeab0daaa42083088adeaf35f8458e2

--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -428,6 +428,11 @@ browser_toolbox_tool_remote_reopen
 js
 ]
 [
+browser_toolbox_toolbar_overflow
+.
+js
+]
+[
 browser_toolbox_tools_per_toolbox_registration
 .
 js
