--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -547,6 +547,21 @@ browser_ext_tabs_update_url
 js
 ]
 [
+browser_ext_themes_chromeparity
+.
+js
+]
+[
+browser_ext_themes_dynamic_updates
+.
+js
+]
+[
+browser_ext_themes_lwtsupport
+.
+js
+]
+[
 browser_ext_topwindowid
 .
 js
