--- a/editor/libeditor/tests/mochitest.ini
+++ b/editor/libeditor/tests/mochitest.ini
@@ -1506,3 +1506,21 @@ test_selection_move_commands
 .
 html
 ]
+[
+test_pasteImgTextarea
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1299578
